--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div class="content-header">
-            <div class="main-text">This website is awesome</div>
-            <div class="secondary-text">this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <div class="first-button"><button>Sign up</button></div>
-            <div class="placeholder-img">this is a placeholder for an image</div>
+        <div class="content">
+            <div class="content-header">
+                <div class="main-text">This website is awesome</div>
+                <div class="secondary-text">this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div class="first-button"><button>Sign up</button></div>
+            </div>        
+                <img class="main-img" src="/home/faculaiz/Downloads/pexels-elina-araja-1743227-3377405.jpg">
         </div>
     </div>
 
@@ -63,10 +65,16 @@
         <div class="call-to-action">
             <div class="third-text">
                 <div class="time">Call to action! It's time!</div>
-                <div class="sign">Sign up for our product by clicking that button right over there</div>
+                <div class="sign">Sign up for our product by clicking that button right over there!</div>
             </div>
-                <div class="second-button"><button>Sign up</button></div>
+                <div class="second-button">
+                    <div><button>Sign up</button></div>
+                </div>
         </div>
+    </div>
+
+    <div class="footer">
+        Copyright ® The Odin Project 2021
     </div>
 </body>
 </html>
